deployment/python-fastapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-fastapi
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: python-fastapi
  template:
    metadata:
      labels:
        app: python-fastapi
    spec:
      containers:
        - name: python-fastapi
          image: iamlookod/python-fastapi:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
      imagePullSecrets:
        - name: regcred
