deployment/python-fastapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-fastapi
spec:
  ingressClassName: nginx
  rules:
    - host: python-fastapi.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-fastapi
                port:
                  number: 80
